# high--level-backend-softwares-Nervintech-project-0001X10-

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_project.json
docs/: GUI_USER_GUIDE.md
native/asm/: entropy_x86_64.S
native/c/: risk_score.c
native/cpp/: anomaly_score.cpp
native/wasm/: risk_adjust.wat
scripts/: build_native.sh  run_api.sh  run_cli_scan.sh  run_gui.sh
site/: index.html  login.html  script.js  styles.css
src/defender_app/: __init__.py  __main__.py  main.py  server_api.py
src/defender_app/core/: __init__.py  models.py  project_store.py  reporting.py  scanner.py
src/defender_app/gui/: app.py
src/defender_app/native/: __init__.py  native_loader.py  wasm_adapter.py
src/defender_app/utils/: __init__.py  frontend_discovery.py  http_client.py  url_tools.py
tests/: test_scanner.py
